# textbook-companion

./: .gitignore  README.md  WALKTHROUGH.md  pyproject.toml  textbook_companion_handoff.md
src/textbook_companion/: __init__.py  commands.py  fixtures.py  ingest.py  llm.py  models.py  session.py  storage.py
src/textbook_companion/prompts/: chapter_recap.txt  end_of_chapter_quiz.txt  quiz_feedback.txt  session_system.txt
tests/: test_commands.py  test_fixtures.py  test_ingest.py  test_llm.py  test_models.py  test_session.py  test_storage.py
